--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
